[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_nesting"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
    {name = "Floortje Roelvink", email = "floortje.roelvink@deltares.nl"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "shapely",
    "scipy",
    "xarray",
    "wget",
    "elementpath",
    "geojson",
    "metpy",
    "siphon",
    "netCDF4",
    "mat73",
    "tabulate",
    "pyyaml",
	"xugrid",
    "toml",
    "hera",
]
